--- a/FilmsDataBase/FilmsDataBase.csproj
+++ b/FilmsDataBase/FilmsDataBase.csproj
@@ -143,8 +143,13 @@
     <Compile Include="Services\Functionality.cs" />
     <Compile Include="ViewModels\AddFilmViewModel.cs" />
     <Compile Include="ViewModels\Base\ViewModel.cs" />
+    <Compile Include="ViewModels\InformationAboutFilmWindowViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Page Include="Views\Windows\AddFilmWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Windows\InformationAboutFilmWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -158,6 +163,9 @@
     </Compile>
     <Compile Include="Views\Windows\AddFilmWindow.xaml.cs">
       <DependentUpon>AddFilmWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Windows\InformationAboutFilmWindow.xaml.cs">
+      <DependentUpon>InformationAboutFilmWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
