Added save files to inner folder and output information about films stored in base in text file

--- a/FilmsDataBase/FilmsDataBase.csproj
+++ b/FilmsDataBase/FilmsDataBase.csproj
@@ -232,7 +232,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Saved\Images\" />
+    <Folder Include="Saved\Trailer\" />
+  </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
       <Visible>False</Visible>
