--- a/FilmsDataBase/FilmsDataBase.csproj
+++ b/FilmsDataBase/FilmsDataBase.csproj
@@ -248,6 +248,15 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Windows\BlueSmile %281%29.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Windows\photo_2022-04-11_20-20-36.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Windows\PinkCalendar.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
