--- a/FilmsDataBase/App.config
+++ b/FilmsDataBase/App.config
@@ -3,10 +3,14 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="FilmsDataBase.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
 	<connectionStrings>
 		<add name="MicrosoftSQLServer" connectionString="Server=DESKTOP-CT758V4\\SQLEXPRESS;Database=FilmDB;Trusted_Connection=True" />
 		<add name="DefaultConnection" connectionString="Data Source=D:\\4 семестр\\РПС\\FilmsDataBase\\FilmsDataBase\\Films.db" providerName="System.Data.SQLite" />
+		<add name="Host" connectionString="https://localhost:44353" />
 	</connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -34,6 +38,17 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <FilmsDataBase.Properties.Settings>
+      <setting name="token" serializeAs="String">
+        <value />
+      </setting>
+    </FilmsDataBase.Properties.Settings>
+  </userSettings>
 </configuration>
