--- a/FIlmsDataBaseWEBApiApplication/Properties/launchSettings.json
+++ b/FIlmsDataBaseWEBApiApplication/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "index.html",
+      "launchUrl": "main.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
