--- a/FIlmsDataBaseWEBApiApplication/appsettings.json
+++ b/FIlmsDataBaseWEBApiApplication/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-CT758V4\\SQLEXPRESS;Database=FilmDB;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-CT758V4\\SQLEXPRESS;Database=TestFilmBase;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
