--- a/FilmsDataBase/packages.config
+++ b/FilmsDataBase/packages.config
@@ -1,10 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="6.3.0" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.19.4" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Data.Sqlite" version="6.0.3" targetFramework="net472" />
   <package id="Microsoft.Data.Sqlite.Core" version="6.0.3" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.17.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.17.0" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.29" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Ninject" version="3.3.4" targetFramework="net472" />
   <package id="Ninject.Web.Common" version="3.3.2" targetFramework="net472" />
@@ -21,6 +29,6 @@
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
 </packages>
